--- a/equipment/index.html
+++ b/equipment/index.html
@@ -72,138 +72,266 @@
 
 	<!--  section -->
 	<section class="hero set-bg" data-setbg="img/page-info-bg.jpg">
-		<br>
-		<br>
-		<div class="text-center">
-			<h2>Studio Inventory</h2>	
-			<h3>Microphones</h3><br>
-		</div>
-	
-		<div class="container">
-			<div class="row">
-				<div class="col-left">
-					<h4>Condensers</h4><br>
-					<h6>
-						- Apex 565 clip-on microphone <br>
-						- Audio Technica AT4033a  <br>
-						- Dachman Audio DA47FET <br>
-						- Dachman Audio DA87SE <br>
-						- MXL V69 Mogami <br>
-						- Sonarworks omni mic <br>
-						- Warm Audio WA-251 <br>
-						- Warm Audio WA-47jr <br>
-						- Warm Audio WA-84 (x2, matched pair)<br>
-					</h6>
-				</div>
-				<div class="col-right">
-					<h4>Dynamics & Ribbon</h4><br>
-					<h6>
-						- AKG D112 <br>
-						- Custom lofi handset phone microphone <br>
-						- ElectroVoice N/D 257A <br>
-						- ElectroVoice RE20 <br>
-						- ElectroVoice RE320 <br>
-						- MXL R144 (x2) <br>
-						- Shure SM57 (x3) & SM58 <br>
-						- Shure SM7b <br>
-					</h6>
-				</div>
-			</div>
-		</div>
-	
-		<div class="text-center">
-			<h3>Rack Gear, Synths & Guitar Gear</h3><br>
-		</div>
-	
-		<div class="container">
-			<div class="row">
-				<div class="col-left">
-					<h4>Interface, Monitoring & Outboard Gear</h4> <br>
-					<h6>
-						- RME UFXIII 188ch audio interface<br>
-						- Behringer ADA8200 (x2, modded) <br>
-						- Yorkville YSM6 with SonarWorks <br>
-						- Technics 3-way HiFi speakers <br>
-						- ART 4ch headphone amplifier <br>
-						- Audio-Technica ATH-M50x headphones (x2) <br>
-						- Bose QC25 headphones <br>
-						- Sennheiser HD518 headphones <br>
-						<br>
-						- ART Pro VLA II <br>
-						- AudioScape SSL Bus Compressor <br>
-						- Cranborne Camden Preamp (x2) <br>
-						- DIYRE CP5 preamp<br>
-						- LA Audio MLX20 dual preamp <br>
-						- N-SONIC N73 Preamp (Neve style)<br>
-						- Shure M267 mixer/limiter <br>
-						- Sony DPS-V55 stereo FX unit<br>
-						- SPL BiG stereo widener<br>
-					</h6>
-				</div>
-				<div class="col-right">
-					<h4>Synths & Guitar hardware </h4> <br>
-					<h6>
-						- ASM Hydrasynth <br>
-						- Behringer Model15 semi modular synth <br>
-						- Casio DG-10 digital guitar synthesizer <br>
-						- Expressive E Osmose <br>
-						- Golem Poseidon 4 Theremin <br>
-						- Roland AX Edge keytar <br>
-						- Roland Fantom 07 76 key synth <br>
-						- Roland RD-2000 88 weighted key <br>
-						<br>
-						- Jackson JS22-7 electric <br>
-						- Alvarez acoustic guitar <br>
-						- Marshall Origin 20W tube amplifier (8ohm) <br>
-						- Peavey MAX 115 300W combo bass amplifier <br>
-						- Peavey 6505+ 60W tube amplifier (4ohm)<br>
-						- Suhr 100W Reactive Loadbox (8ohm)<br>
-						- Hughes & Kettner Spirit of Rock 50W (4ohm)<br>
-						- Orange Micro Dark 25W (8ohm)<br>
-						- Line 6 Spider Valve 112 hybrid combo amp<br>
-						<br>
-						- Boss HM2 & MT2 overdrive pedals <br>
-						- Boss RC-20 Loop Pedal <br>
-						- Electro-Harmonix Big Muff fuzz pedal (Soviet era) <br>
-						- Fender Hello Kitty Fuzz <br>
-						- Joyo Tauren (Klon clone) <br>
-						- Maschine MK1 pad controller <br>
-						- PreSonus Faderport 16 <br>
-						- Radial ProRMP Reamp box <br>
-						- RNDI Active DI <br>
-						- ART PD2 2ch Passive DI (x2) <br>
-						- ART BT-DI Bluetooth DI box <br>						
-					</h6>
+	<br><br>
+	<div class="text-center">
+		<h2>Studio Inventory</h2>	
+	</div>
+
+	<div class="container">
+		<!-- Start Accordion -->
+		<div class="accordion">
+
+			<!-- Microphones -->
+			<div class="accordion-item">
+				<button class="accordion-button">Microphones</button>
+				<div class="accordion-content">
+					<h4>Condensers</h4>
+					<ul>
+						<li>Apex 565 clip-on microphone</li>
+						<li>Audio Technica AT4033a</li>
+						<li>Dachman Audio DA47FET</li>
+						<li>Dachman Audio DA87SE</li>
+						<li>MXL V69 Mogami</li>
+						<li>Sonarworks Omni Mic</li>
+						<li>Warm Audio WA-251</li>
+						<li>Warm Audio WA-47jr</li>
+						<li>Warm Audio WA-84 (x2, matched pair)</li>
+					</ul>
+
+					<h4>Dynamics</h4>
+					<ul>
+						<li>AKG D112</li>
+						<li>ElectroVoice N/D 257A</li>
+						<li>ElectroVoice RE20</li>
+						<li>ElectroVoice RE320</li>
+						<li>Shure SM57 (x3) & SM58</li>
+						<li>Shure SM7b</li>
+					</ul>
+
+					<h4>Ribbon</h4>
+					<ul>
+						<li>MXL R144 (x2)</li>
+					</ul>
+
+					<h4>Specialty</h4>
+					<ul>
+						<li>Custom lofi handset phone microphone</li>
+					</ul>
 				</div>
 			</div>
+
+			<!-- Studio Hardware -->
+			<div class="accordion-item">
+				<button class="accordion-button">Studio Hardware</button>
+				<div class="accordion-content">
+					<h4>Audio Interface & Converters</h4>
+					<ul>
+						<li>RME UFXIII 188ch audio interface</li>
+						<li>Behringer ADA8200 (x2, modded)</li>
+					</ul>
+
+					<h4>Monitoring</h4>
+					<ul>
+						<li>Yorkville YSM6 with SonarWorks</li>
+						<li>Technics 3-way HiFi speakers</li>
+						<li>Audio-Technica ATH-M50x headphones (x2)</li>
+						<li>Bose QC25 headphones</li>
+						<li>Sennheiser HD518 headphones</li>
+					</ul>
+
+					<h4>Preamps</h4>
+					<ul>
+						<li>Cranborne Camden Preamp (x2)</li>
+						<li>DIYRE CP5 Preamp</li>
+						<li>LA Audio MLX20 dual preamp</li>
+						<li>N-SONIC N73 Preamp (Neve style)</li>
+					</ul>
+
+					<h4>Compressors & FX Units</h4>
+					<ul>
+						<li>ART Pro VLA II</li>
+						<li>AudioScape SSL Bus Compressor</li>
+						<li>Shure M267 mixer/limiter</li>
+						<li>Sony DPS-V55 stereo FX unit</li>
+						<li>SPL BiG stereo widener</li>
+					</ul>
+				</div>
+			</div>
+
+			<!-- Instruments & Synths -->
+			<div class="accordion-item">
+				<button class="accordion-button">Instruments & Synths</button>
+				<div class="accordion-content">
+					<h4>Keyboards & Synths</h4>
+					<ul>
+						<li>ASM Hydrasynth</li>
+						<li>Behringer Model15 semi modular synth</li>
+						<li>Expressive E Osmose</li>
+						<li>Roland AX Edge keytar</li>
+						<li>Roland Fantom 07 76 key synth</li>
+						<li>Roland RD-2000 88 weighted key</li>
+					</ul>
+
+					<h4>Other Instruments</h4>
+					<ul>
+						<li>Casio DG-10 digital guitar synthesizer</li>
+						<li>Golem Poseidon 4 Theremin</li>
+					</ul>
+				</div>
+			</div>
+
+			<!-- Guitar/Bass Gear -->
+			<div class="accordion-item">
+				<button class="accordion-button">Guitar & Bass Gear</button>
+				<div class="accordion-content">
+					<h4>Electric Guitars</h4>
+					<ul>
+						<li>Jackson JS22-7 electric</li>
+						<li>Alvarez acoustic guitar</li>
+					</ul>
+
+					<h4>Amplifiers</h4>
+					<ul>
+						<li>Marshall Origin 20W tube amplifier</li>
+						<li>Peavey MAX 115 300W bass amplifier</li>
+						<li>Peavey 6505+ 60W tube amplifier</li>
+						<li>Hughes & Kettner Spirit of Rock 50W</li>
+						<li>Orange Micro Dark 25W</li>
+						<li>Line 6 Spider Valve 112 hybrid combo amp</li>
+						<li>Orange PPC212 cabinet (Jim Root signature)</li>
+						<li>Suhr 100W Reactive Loadbox</li>
+					</ul>
+
+					<h4>Pedals & FX</h4>
+					<ul>
+						<li>Boss HM2 & MT2 overdrive pedals</li>
+						<li>Boss RC-20 Loop Pedal</li>
+						<li>Electro-Harmonix Big Muff fuzz pedal (Soviet era)</li>
+						<li>Fender Hello Kitty Fuzz</li>
+						<li>Joyo Tauren (Klon clone)</li>
+					</ul>
+
+					<h4>Accessories</h4>
+					<ul>
+						<li>Radial ProRMP Reamp box</li>
+						<li>RNDI Active DI</li>
+						<li>ART PD2 Passive DI (x2)</li>
+						<li>ART BT-DI Bluetooth DI box</li>
+						<li>Maschine MK1 pad controller</li>
+						<li>PreSonus Faderport 16</li>
+					</ul>
+				</div>
+			</div>
+
+			<!-- Software -->
+			<div class="accordion-item">
+				<button class="accordion-button">Software</button>
+				<div class="accordion-content">
+					<h4>DAWs</h4>
+					<ul>
+						<li>Cubase 14 Pro</li>
+						<li>Harrison MixBus Pro</li>
+						<li>PreSonus Studio One Artist 6</li>
+						<li>Reaper</li>
+					</ul>
+
+					<h4>Mixing/Mastering Plugins</h4>
+					<ul>
+						<li>FabFilter suite (Q3&4, C2, L2, etc)</li>
+						<li>Izotope (Ozone, Nectar, Neutron, etc)</li>
+						<li>Black Salt Audio Silencer</li>
+						<li>Oeksound (Soothe2, Spiff)</li>
+						<li>SSL Native Bus Compressor & Channel Strip</li>
+						<li>URM (ChannelMate, LimiTilt, MiniClip, TrimPan)</li>
+						<li>SonarWorks SoundID</li>
+					</ul>
+
+					<h4>Soft Synths & Instruments</h4>
+					<ul>
+						<li>Absynth 5, Equator2, FM8, Mercury6, Massive, MassiveX, SWAM Strings</li>
+						<li>Native Instruments (Kontakt, Battery)</li>
+					</ul>
+
+					<h4>Guitar/Bass Virtual Amps</h4>
+					<ul>
+						<li>Neural DSP (Plini, Petrucci, Rabea)</li>
+						<li>Bogren Digital (Krimh Drums, Bassknob STD, 5169 Ampknob)</li>
+						<li>SubMission Audio Flatline 2</li>
+					</ul>
+
+					<h4>Vocal Tools</h4>
+					<ul>
+						<li>Synchro Arts VocAlign 6</li>
+						<li>Universal Audio plugins (1176, LA2A, etc)</li>
+						<li>iZotope VocalSynth</li>
+					</ul>
+
+					<p><em>And more!</em></p>
+				</div>
+			</div>
+
 		</div>
-	
-		<div class="text-center">
-			<h3>Software</h3><br>
-			<h6>
-				- Cubase 14 Pro<br>
-				- Harrison MixBus Pro<br>
-				- PreSonus Studio One Artist 6<br>
-				- Reaper<br>
-				- Black Salt Audio Silencer <br>
-				- Bogren Digital (Krimh Drums, Bassknob STD, 5169 ampknob) <br>
-				- FabFilter suite (Q3&4, C2, L2, R, MB, Saturn, Timeless) <br>
-				- Izotope (Ozone, Nectar, Neutron, RX, VocalSynth, Trash)<br>
-				- Native Instruments (Kontakt, Battery)<br>
-				- Neural DSP (Plini, Petrucci, Rabea)<br>
-				- Oeksound (Soothe2, Spiff)<br>
-				- Softsynths (Absynth 5, Equator2, FM8, Mercury6, Massive, MassiveX, SWAM Strings)<br>
-				- SonarWorks SoundID room & headphone correction <br>
-				- SubMission Audio Flatline 2 <br>
-				- Synchro Arts VocAlign 6 <br>
-				- SSL Native Bus Compressor & Channel Strip <br>
-				- ToonTrack Superior Drummer 3 <br>
-				- Universal Audio (1176, DBX160, Fairchild, LA2A, Plate Verb) <br>
-				- URM (ChannelMate, LimiTilt, MiniClip, TrimPan) <br>
-				And more! Too much to fit on here.
-			</h6>
-		</div>
-	</section>
+		<!-- End Accordion -->
+	</div>
+</section>
+
+<!-- Accordion Styling + Functionality -->
+<style>
+.accordion-button {
+	background-color: #333;
+	color: white;
+	cursor: pointer;
+	padding: 18px;
+	width: 100%;
+	text-align: left;
+	border: none;
+	outline: none;
+	transition: 0.3s;
+	font-size: 18px;
+}
+
+.accordion-button:hover {
+	background-color: #555;
+}
+
+.accordion-content {
+	padding: 0 18px;
+	display: none;
+	background-color: #f9f9f9;
+	overflow: hidden;
+}
+
+.accordion-content h4 {
+	margin-top: 20px;
+}
+
+.accordion-content ul {
+	list-style: none;
+	padding-left: 0;
+}
+
+.accordion-content ul li {
+	margin: 5px 0;
+}
+</style>
+
+<script>
+const accButtons = document.querySelectorAll(".accordion-button");
+
+accButtons.forEach(button => {
+	button.addEventListener("click", () => {
+		const content = button.nextElementSibling;
+
+		button.classList.toggle("active");
+
+		if (content.style.display === "block") {
+			content.style.display = "none";
+		} else {
+			content.style.display = "block";
+		}
+	});
+});
+</script>
 	
 	
 	<style>
