--- a/equipment/index.html
+++ b/equipment/index.html
@@ -155,6 +155,12 @@
 						<li>Sony DPS-V55 stereo FX unit</li>
 						<li>SPL BiG stereo widener</li>
 					</ul>
+
+					<h4>Other controllers</h4>
+					<ul>
+						<li>Maschine MK1 pad controller</li>
+						<li>PreSonus Faderport 16</li>
+					</ul>
 				</div>
 			</div>
 
@@ -184,13 +190,7 @@
 			<div class="accordion-item">
 				<button class="accordion-button">Guitar & Bass Gear</button>
 				<div class="accordion-content">
-					<h4>Electric Guitars</h4>
-					<ul>
-						<li>Jackson JS22-7 electric</li>
-						<li>Alvarez acoustic guitar</li>
-					</ul>
-
-					<h4>Amplifiers</h4>
+					<h4>Amplifiers & Cabinets</h4>
 					<ul>
 						<li>Marshall Origin 20W tube amplifier</li>
 						<li>Peavey MAX 115 300W bass amplifier</li>
@@ -200,6 +200,13 @@
 						<li>Line 6 Spider Valve 112 hybrid combo amp</li>
 						<li>Orange PPC212 cabinet (Jim Root signature)</li>
 						<li>Suhr 100W Reactive Loadbox</li>
+					</ul>
+
+					<h4>Guitars & Ukuleles</h4>
+					<ul>
+						<li>Jackson JS22-7 electric</li>
+						<li>Alvarez acoustic guitar</li>
+						<li>Kala tenor ukulele</li>
 					</ul>
 
 					<h4>Pedals & FX</h4>
@@ -217,8 +224,6 @@
 						<li>RNDI Active DI</li>
 						<li>ART PD2 Passive DI (x2)</li>
 						<li>ART BT-DI Bluetooth DI box</li>
-						<li>Maschine MK1 pad controller</li>
-						<li>PreSonus Faderport 16</li>
 					</ul>
 				</div>
 			</div>
@@ -297,7 +302,7 @@
 .accordion-content {
 	padding: 0 18px;
 	display: none;
-	background-color: #f9f9f9;
+	background-color: #f9f9f988;
 	overflow: hidden;
 }
 
