--- a/equipment/index.html
+++ b/equipment/index.html
@@ -156,8 +156,9 @@
 						<li>SPL BiG stereo widener</li>
 					</ul>
 
-					<h4>Other controllers</h4>
+					<h4>MIDI controllers</h4>
 					<ul>
+						<li>Arturia Keystep 25</li>
 						<li>Maschine MK1 pad controller</li>
 						<li>PreSonus Faderport 16</li>
 					</ul>
