Add explainer text

--- a/equipment/index.html
+++ b/equipment/index.html
@@ -29,6 +29,7 @@
 	<link rel="stylesheet" href="../css/animate.css"/>
 
 
+
 	<!--[if lt IE 9]>
 	  <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
 	  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
@@ -74,7 +75,8 @@
 	<section class="hero set-bg" data-setbg="img/page-info-bg.jpg">
 	<br><br>
 	<div class="text-center">
-		<h2>Studio Inventory</h2>	
+		<h2>Studio Inventory</h2>
+		<h6>Click or tap on any section below to expand.</h6>	
 	</div>
 
 	<div class="container">
@@ -83,7 +85,7 @@
 
 			<!-- Microphones -->
 			<div class="accordion-item">
-				<button class="accordion-button">Microphones</button>
+				<button class="accordion-button">Microphones</i></button>
 				<div class="accordion-content">
 					<h4>Condensers</h4>
 					<ul>
