--- a/equipment/index.html
+++ b/equipment/index.html
@@ -171,7 +171,7 @@
 			<div class="accordion-item">
 				<button class="accordion-button">Instruments & Synths</button>
 				<div class="accordion-content">
-					<h4>Keyboards & Synths</h4>
+					<h4>Keyboards & Hardware Synths</h4>
 					<ul>
 						<li>ASM Hydrasynth</li>
 						<li>Behringer Model15 semi modular synth</li>
@@ -180,11 +180,20 @@
 						<li>Roland Fantom 07 76 key synth</li>
 						<li>Roland RD-2000 88 weighted key</li>
 					</ul>
+					
+					<h4>Guitars & Ukuleles</h4>
+					<ul>
+						<li>Jackson JS22-7 electric</li>
+						<li>Alvarez acoustic guitar</li>
+						<li>Parlour-sized nylon string guitar </li>
+						<li>Kala tenor ukulele</li>
+					</ul>
 
 					<h4>Other Instruments</h4>
 					<ul>
 						<li>Casio DG-10 digital guitar synthesizer</li>
 						<li>Golem Poseidon 4 Theremin</li>
+						<li>Kalimba thumb piano</li>
 					</ul>
 				</div>
 			</div>
@@ -203,13 +212,6 @@
 						<li>Line 6 Spider Valve 112 hybrid combo amp</li>
 						<li>Orange PPC212 cabinet (Jim Root signature)</li>
 						<li>Suhr 100W Reactive Loadbox</li>
-					</ul>
-
-					<h4>Guitars & Ukuleles</h4>
-					<ul>
-						<li>Jackson JS22-7 electric</li>
-						<li>Alvarez acoustic guitar</li>
-						<li>Kala tenor ukulele</li>
 					</ul>
 
 					<h4>Pedals & FX</h4>
