--- a/equipment/index.html
+++ b/equipment/index.html
@@ -78,9 +78,9 @@
 		<h2>Studio Inventory</h2>
 		<h6>Click or tap on any section below to expand.</h6>	
 		<br>
-		<h6> <button id="expandAll" style="margin-bottom: 20px; padding: 10px 20px; font-size: 16px; cursor: pointer;">
+		<h6> <button id="expandAll">
 	Expand All Sections
-</button></h6>
+		</button></h6>
 	</div>
 
 	<div class="container">
