--- a/equipment/index.html
+++ b/equipment/index.html
@@ -78,9 +78,19 @@
 		<h2>Studio Inventory</h2>
 		<h6>Click or tap on any section below to expand.</h6>	
 		<br>
-		<h6> <button id="expandAll">
+		<button id="expandAll" style="
+	background-color: rgba(51, 51, 51, 0.7); 
+	color: white; 
+	border: none; 
+	border-radius: 8px; 
+	padding: 10px 20px; 
+	font-size: 16px; 
+	cursor: pointer; 
+	margin-bottom: 20px;
+	transition: background-color 0.3s;
+">
 	Expand All Sections
-		</button></h6>
+</button>
 	</div>
 
 	<div class="container">
