--- a/equipment/index.html
+++ b/equipment/index.html
@@ -218,12 +218,12 @@
 				<div class="accordion-content">
 					<h4>Amplifiers & Cabinets</h4>
 					<ul>
-						<li>Marshall Origin 20W tube amplifier</li>
-						<li>Peavey MAX 115 300W bass amplifier</li>
-						<li>Peavey 6505+ 60W tube amplifier</li>
 						<li>Hughes & Kettner Spirit of Rock 50W</li>
+						<li>Marshall Origin 20W</li>
 						<li>Orange Micro Dark 25W</li>
+						<li>Peavey 6505+ 60W tube amplifier</li>
 						<li>Line 6 Spider Valve 112 hybrid combo amp</li>
+						<li>Peavey MAX 115 300W combo bass amp</li>
 						<li>Orange PPC212 cabinet (Jim Root signature)</li>
 						<li>Suhr 100W Reactive Loadbox</li>
 					</ul>
@@ -266,6 +266,7 @@
 						<li>Black Salt Audio Silencer</li>
 						<li>Oeksound (Soothe2, Spiff)</li>
 						<li>SSL Native Bus Compressor & Channel Strip</li>
+						<li>SubMission Audio Flatline 2</li>
 						<li>URM (ChannelMate, LimiTilt, MiniClip, TrimPan)</li>
 						<li>SonarWorks SoundID</li>
 					</ul>
@@ -279,9 +280,18 @@
 					<h4>Guitar/Bass Virtual Amps</h4>
 					<ul>
 						<li>Neural DSP (Plini, Petrucci, Rabea)</li>
-						<li>Bogren Digital (Krimh Drums, Bassknob STD, 5169 Ampknob)</li>
-						<li>SubMission Audio Flatline 2</li>
+						<li>Bogren Digital (Bassknob STD, 5169 Ampknob)</li>
+						<li>Scuffham Amps S-Gear 3</li>
+						<li>Two Notes Genome & Wall Of Sound</li>
 					</ul>
+
+					<h4>Drum Production</h4>
+					<ul>
+						<li>Bogren Digital Krimh Drums</li>
+						<li>Samples From Mars complete collection</li>
+						<li>ToonTrack Superior Drummer 3</li>
+						<li>Steven Slate Trigger 2</li>
+					</ul>	
 
 					<h4>Vocal Tools</h4>
 					<ul>
