--- a/equipment/index.html
+++ b/equipment/index.html
@@ -273,7 +273,14 @@
 
 					<h4>Soft Synths & Instruments</h4>
 					<ul>
-						<li>Absynth 5, Equator2, FM8, Mercury6, Massive, MassiveX, SWAM Strings</li>
+						<li>Absynth 5</li>
+						<li>Battery</li>
+						<li>Equator2</li>
+						<li>FM8</li>
+						<li>Kontakt (Full)</li>
+						<li>Mercury 6</li>
+						<li>Massive & Massive X</li>
+						<li>SWAM Solo Strings 3</li>
 						<li>Native Instruments (Kontakt, Battery)</li>
 					</ul>
 
@@ -281,7 +288,9 @@
 					<ul>
 						<li>Neural DSP (Plini, Petrucci, Rabea)</li>
 						<li>Bogren Digital (Bassknob STD, 5169 Ampknob)</li>
+						<li>Brainworx Ampeg SVT-VR</li>
 						<li>Scuffham Amps S-Gear 3</li>
+						<li>Softube Marshall Plexi</li>
 						<li>Two Notes Genome & Wall Of Sound</li>
 					</ul>
 
@@ -289,8 +298,8 @@
 					<ul>
 						<li>Bogren Digital Krimh Drums</li>
 						<li>Samples From Mars complete collection</li>
-						<li>ToonTrack Superior Drummer 3</li>
 						<li>Steven Slate Trigger 2</li>
+						<li>ToonTrack Superior Drummer 3</li>
 					</ul>	
 
 					<h4>Vocal Tools</h4>
