--- a/equipment/index.html
+++ b/equipment/index.html
@@ -281,7 +281,6 @@
 						<li>Mercury 6</li>
 						<li>Massive & Massive X</li>
 						<li>SWAM Solo Strings 3</li>
-						<li>Native Instruments (Kontakt, Battery)</li>
 					</ul>
 
 					<h4>Guitar/Bass Virtual Amps</h4>
@@ -289,9 +288,11 @@
 						<li>Neural DSP (Plini, Petrucci, Rabea)</li>
 						<li>Bogren Digital (Bassknob STD, 5169 Ampknob)</li>
 						<li>Brainworx Ampeg SVT-VR</li>
+						<li>Native Instruments Guitar Rig 5</li>
 						<li>Scuffham Amps S-Gear 3</li>
 						<li>Softube Marshall Plexi</li>
 						<li>Two Notes Genome & Wall Of Sound</li>
+						<li>Waves Gtr</li>
 					</ul>
 
 					<h4>Drum Production</h4>
