--- a/equipment/index.html
+++ b/equipment/index.html
@@ -197,10 +197,11 @@
 					
 					<h4>Guitars & Ukuleles</h4>
 					<ul>
-						<li>Jackson JS22-7 electric</li>
+						<li>Jackson JS22-7 electric guitar</li>
 						<li>Alvarez acoustic guitar</li>
-						<li>Parlour-sized nylon string guitar </li>
-						<li>Kala tenor ukulele</li>
+						<li>Parlour-sized nylon string guitar</li>
+						<li>Epiphone Les Paul tenor scale ukulele </li>
+						<li>Kala tenor scale ukulele</li>
 					</ul>
 
 					<h4>Other Instruments</h4>
@@ -218,13 +219,13 @@
 				<div class="accordion-content">
 					<h4>Amplifiers & Cabinets</h4>
 					<ul>
-						<li>Hughes & Kettner Spirit of Rock 50W</li>
-						<li>Marshall Origin 20W</li>
-						<li>Orange Micro Dark 25W</li>
-						<li>Peavey 6505+ 60W tube amplifier</li>
-						<li>Line 6 Spider Valve 112 hybrid combo amp</li>
+						<li>Hughes & Kettner Spirit of Rock 50W head</li>
+						<li>Marshall Origin 20W head</li>
+						<li>Orange Micro Dark 25W head</li>
+						<li>Peavey 6505+ 60W head</li>
+						<li>Line 6 Spider Valve 112 combo guitar amp</li>
 						<li>Peavey MAX 115 300W combo bass amp</li>
-						<li>Orange PPC212 cabinet (Jim Root signature)</li>
+						<li>Orange PPC212 guitar cabinet (Jim Root signature)</li>
 						<li>Suhr 100W Reactive Loadbox</li>
 					</ul>
 
