--- a/equipment/index.html
+++ b/equipment/index.html
@@ -200,7 +200,7 @@
 						<li>Jackson JS22-7 electric guitar</li>
 						<li>Alvarez acoustic guitar</li>
 						<li>Parlour-sized nylon string guitar</li>
-						<li>Epiphone Les Paul tenor scale ukulele </li>
+						<li>Epiphone Les Paul concert scale ukulele </li>
 						<li>Kala tenor scale ukulele</li>
 					</ul>
 
