--- a/equipment/index.html
+++ b/equipment/index.html
@@ -148,8 +148,9 @@
 
 					<h4>Monitoring</h4>
 					<ul>
-						<li>Yorkville YSM6 with SonarWorks</li>
+						<li>Yorkville YSM6 2-way monitors <i>with SonarWorks</i></li>
 						<li>Technics 3-way HiFi speakers</li>
+						<li>Harman/Kardon HK3300 amplifier</li>
 						<li>Audio-Technica ATH-M50x headphones (x2)</li>
 						<li>Bose QC25 headphones</li>
 						<li>Sennheiser HD518 headphones</li>
