--- a/equipment/index.html
+++ b/equipment/index.html
@@ -158,10 +158,10 @@
 
 					<h4>Preamps</h4>
 					<ul>
-						<li>Cranborne Camden Preamp (x2)</li>
-						<li>DIYRE CP5 Preamp</li>
+						<li>Cranborne Camden (x2)</li>
+						<li>DIYRE CP5</li>
 						<li>LA Audio MLX20 dual preamp</li>
-						<li>N-SONIC N73 Preamp (Neve style)</li>
+						<li>N-SONIC N73 (Neve style)</li>
 					</ul>
 
 					<h4>Compressors & FX Units</h4>
