--- a/equipment/index.html
+++ b/equipment/index.html
@@ -136,52 +136,6 @@
 				</div>
 			</div>
 
-			<!-- Studio Hardware -->
-			<div class="accordion-item">
-				<button class="accordion-button">Studio Hardware</button>
-				<div class="accordion-content">
-					<h4>Audio Interface & Converters</h4>
-					<ul>
-						<li>RME UFXIII 188ch audio interface</li>
-						<li>Behringer ADA8200 (x2, modded)</li>
-					</ul>
-
-					<h4>Monitoring</h4>
-					<ul>
-						<li>Yorkville YSM6 2-way monitors <i>with SonarWorks</i></li>
-						<li>Technics 3-way HiFi speakers</li>
-						<li>Harman/Kardon HK3300 amplifier</li>
-						<li>Audio-Technica ATH-M50x headphones (x2)</li>
-						<li>Bose QC25 headphones</li>
-						<li>Sennheiser HD518 headphones</li>
-					</ul>
-
-					<h4>Preamps</h4>
-					<ul>
-						<li>Cranborne Camden (x2)</li>
-						<li>DIYRE CP5</li>
-						<li>LA Audio MLX20 dual preamp</li>
-						<li>N-SONIC N73 (Neve style)</li>
-					</ul>
-
-					<h4>Compressors & FX Units</h4>
-					<ul>
-						<li>ART Pro VLA II</li>
-						<li>AudioScape SSL Bus Compressor</li>
-						<li>Shure M267 mixer/limiter</li>
-						<li>Sony DPS-V55 stereo FX unit</li>
-						<li>SPL BiG stereo widener</li>
-					</ul>
-
-					<h4>MIDI controllers</h4>
-					<ul>
-						<li>Arturia Keystep 25</li>
-						<li>Maschine MK1 pad controller</li>
-						<li>PreSonus Faderport 16</li>
-					</ul>
-				</div>
-			</div>
-
 			<!-- Instruments & Synths -->
 			<div class="accordion-item">
 				<button class="accordion-button">Instruments & Synths</button>
@@ -249,6 +203,56 @@
 				</div>
 			</div>
 
+			<!-- Studio Hardware -->
+			<div class="accordion-item">
+				<button class="accordion-button">Studio Hardware</button>
+				<div class="accordion-content">
+					<h4>Audio Interface & Converters</h4>
+					<ul>
+						<li>RME UFXIII 188ch audio interface</li>
+						<li>Behringer ADA8200 (x2, modded)</li>
+					</ul>
+
+					<h4>Monitoring</h4>
+					<ul>
+						<li>Yorkville YSM6 2-way monitors <i>with SonarWorks</i></li>
+						<li>Technics 3-way HiFi speakers</li>
+						<li>Harman/Kardon HK3300 amplifier</li>
+						<li>Audio-Technica ATH-M50x headphones (x2)</li>
+						<li>Bose QC25 headphones</li>
+						<li>Sennheiser HD518 headphones</li>
+					</ul>
+
+					<h4>Preamps</h4>
+					<ul>
+						<li>Cranborne Camden (x2)</li>
+						<li>DIYRE CP5</li>
+						<li>LA Audio MLX20 dual preamp</li>
+						<li>N-SONIC N73 (Neve style)</li>
+					</ul>
+
+					<h4>Compressors & FX Units</h4>
+					<ul>
+						<li>ART Pro VLA II</li>
+						<li>AudioScape SSL Bus Compressor</li>
+						<li>Shure M267 mixer/limiter</li>
+						<li>Sony DPS-V55 stereo FX unit</li>
+						<li>SPL BiG stereo widener</li>
+					</ul>
+
+					<h4>MIDI controllers</h4>
+					<ul>
+						<li>Arturia Keystep 25</li>
+						<li>Maschine MK1 pad controller</li>
+						<li>PreSonus Faderport 16</li>
+					</ul>
+				</div>
+			</div>
+
+			
+
+			
+
 			<!-- Software -->
 			<div class="accordion-item">
 				<button class="accordion-button">Software</button>
@@ -268,7 +272,7 @@
 						<li>Black Salt Audio Silencer</li>
 						<li>Oeksound (Soothe2, Spiff)</li>
 						<li>SSL Native Bus Compressor & Channel Strip</li>
-						<li>SubMission Audio Flatline 2</li>
+						<li>SubMission Audio (Flatline 2, PreFire)</li>
 						<li>URM (ChannelMate, LimiTilt, MiniClip, TrimPan)</li>
 						<li>SonarWorks SoundID</li>
 					</ul>
