--- a/equipment/index.html
+++ b/equipment/index.html
@@ -267,8 +267,8 @@
 
 					<h4>Mixing/Mastering Plugins</h4>
 					<ul>
-						<li>FabFilter suite (Q3&4, C2, L2, etc)</li>
-						<li>Izotope (Ozone, Nectar, Neutron, etc)</li>
+						<li>FabFilter suite (Q3&4, C2, L2, MB, R, Saturn, Timeless)</li>
+						<li>Izotope (Ozone, Nectar, Neutron, RX)</li>
 						<li>Black Salt Audio Silencer</li>
 						<li>Oeksound (Soothe2, Spiff)</li>
 						<li>SSL Native Bus Compressor & Channel Strip</li>
