--- a/equipment/index.html
+++ b/equipment/index.html
@@ -152,6 +152,7 @@
 					
 					<h4>Guitars & Ukuleles</h4>
 					<ul>
+						<li>Epiphone Les Paul Studio electric guitar</li>
 						<li>Jackson JS22-7 electric guitar</li>
 						<li>Alvarez acoustic guitar</li>
 						<li>Parlour-sized nylon string guitar</li>
