--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="font-awesome.min.css"/>
   <link rel ="icon" type="image/x-icon" href="img/favicon.ico">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTTX1p6+Yz1v3XWZp9UXBlWJ8LU6QO7sIFVJG8D5Ojz9q1T5O99Q6YrD3rbjUfdvO7K4hDRb3g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"/>
+  
   <style>
  
   </style>
