--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       </p>
       <br>
       <p>
-        The studio, located in Cambridge, Ontario, is fully equipped for live drum tracking and real amp recording, and I’m always up for collaborating with people who care about getting the feel just right. If you’re looking for someone who can bring a musical ear and a bit of personality to your project, let’s talk.
+        The studio, located in Cambridge, Ontario, Canada, is fully equipped for live drum tracking and real amp recording, and I’m always up for collaborating with people who care about getting the feel just right. If you’re looking for someone who can bring a musical ear and a bit of personality to your project, let’s talk.
       </p>
       <br>
       <p>
