--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
 				</div>
 			</form>
             <div class="ft-contact-widget">
-            <p><a href="https://instagram.com/antarcticstudios"><i class="fa fa-instagram"> </i> @antarcticstudios</a></p>
-							<p><a href="https://facebook.com/antarcticstudios"><i class="fa fa-facebook"></i> @antarcticstudios </a></p>
+            <p><a href="https://instagram.com/antarcticstudios"><i class="fa-brands fa-instagram"> </i> @antarcticstudios</a></p>
+							<p><a href="https://facebook.com/antarcticstudios"><i class="fa-brands fa-facebook"></i> @antarcticstudios </a></p>
 							<p><a href="mailto:alex@antarcticstudios.ca"><i class="fa fa-envelope"></i> alex@antarcticstudios.ca</a></p>
 							<p><i class="fa fa-phone"></i> +1 226 279 2261</a></p>
             </div>
