Make buttons disabled

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 
 			<!-- Microphones -->
 			<div class="accordion-item active">
-				<button class="accordion-button">Microphones</i></button>
+				<button class="accordion-button" disabled>Microphones</i></button>
 				<div class="accordion-content">
 					<h4>Condensers</h4>
 					<div class="gear-grid">
@@ -170,7 +170,7 @@
 
 			<!-- Instruments & Synths -->
 			<div class="accordion-item active">
-				<button class="accordion-button">Instruments & Synths</button>
+				<button class="accordion-button" disabled>Instruments & Synths</button>
 				<div class="accordion-content">
 					<h4>Keyboards & Hardware Synths</h4>
 					<div class="gear-grid">
@@ -203,7 +203,7 @@
 
 			<!-- Guitar/Bass Gear -->
 			<div class="accordion-item active">
-				<button class="accordion-button">Guitar & Bass Gear</button>
+				<button class="accordion-button" disabled>Guitar & Bass Gear</button>
 				<div class="accordion-content">
 					<h4>Amplifiers & Cabinets</h4>
 					<div class="gear-grid">
@@ -238,7 +238,7 @@
 
 			<!-- Studio Hardware -->
 			<div class="accordion-item active">
-				<button class="accordion-button">Studio Hardware</button>
+				<button class="accordion-button" disabled>Studio Hardware</button>
 				<div class="accordion-content">
 					<h4>Audio Interface & Converters</h4>
 					<div class="gear-grid">
@@ -288,7 +288,7 @@
 
 			<!-- Software -->
 			<div class="accordion-item active">
-				<button class="accordion-button">Software</button>
+				<button class="accordion-button" disabled>Software</button>
 				<div class="accordion-content">
 					<h4>DAWs</h4>
 					<div class="gear-grid">
