--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
     <div id="track-list" class="track-grid"></div>
 
-    <audio id="player" controls style="width: 100%; margin-top: 30px;"></audio>
+    <audio id="player" controls style="width: 100%; margin-top: 30px;" controlsList="nodownload"></audio>
   </section>
 
   <section id="reviews">
