--- a/index.html
+++ b/index.html
@@ -68,6 +68,12 @@
     <h2>Filter by Genre</h2>
     <div class="filter-buttons" id="genre-buttons"></div>
 
+	<div class="filter-buttons" id="clear-filters-wrapper" style="text-align: center; margin-top: 1rem; display: none;">
+		<button id="clear-filters">
+		  Clear Filters
+		</button>
+	  </div>
+
     <h3>Click or tap on any of the tracks below to listen!</h3>
 
     <div id="track-list" class="track-grid"></div>
