--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             <p><a href="https://instagram.com/antarcticstudios"><i class="fa-brands fa-instagram"> </i> @antarcticstudios</a></p>
 							<p><a href="https://facebook.com/antarcticstudios"><i class="fa-brands fa-facebook"></i> @antarcticstudios </a></p>
 							<p><a href="mailto:alex@antarcticstudios.ca"><i class="fa fa-envelope"></i> alex@antarcticstudios.ca</a></p>
-							<p><i class="fa fa-phone"></i> +1 226 279 2261</a></p>
+							<p><a href="tel:+1226-279-2261"><i class="fa fa-phone"></i>(226) 279 2261</a></p>
 							<br>
 							<p><a href="https://credits.muso.ai/profile/aaebb6e7-05ed-4003-8c4b-5f5a7020d2d0">More credits</a></a></p>
             </div>
