Update to dynamically show experience

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 		<br>
         <h1>About the Studio</h1>
       <p>
-        Hi, I’m Alex McVittie, owner and operator of Antarctic Studios. I’ve been playing keys for over 25 years and sax for 17, and I’ve been in more bands than I can count—everything from ska to prog rock. While I'm still in a few prog bands and have a solo synthwave project, I love helping artists take their tracks to the next level with recording, mixing, mastering, and session work.
+        Hi, I’m Alex McVittie, owner and operator of Antarctic Studios. I’ve been playing keys for over <span id="years-keys"></span>, sax for over <span id="years-sax"></span>, and I’ve been in more bands than I can count—everything from ska to prog rock. While I'm still in a few prog bands and have a solo synthwave project, I love helping artists take their tracks to the next level with recording, mixing, mastering, and session work.
       </p>
       <br>
       <p>
