--- a/index.html
+++ b/index.html
@@ -97,16 +97,16 @@
 			<form class="contact-form" action="https://formspree.io/f/maylelbk" method="POST">
 				<div class="row">
 					<div class="col-lg-4">
-						<input type="text" placeholder="Your Name" name="name">
+						<input type="text" placeholder="Your Name" name="name" required>
 					</div>
 					<div class="col-lg-4">
-						<input type="text" placeholder="Your E-mail" name="_replyto">
+						<input type="text" placeholder="Your E-mail" name="_replyto" required>
 					</div>
 					<div class="col-lg-4">
-						<input type="text" placeholder="Subject" name="subject">
+						<input type="text" placeholder="Subject" name="subject" required>
 					</div>
 					<div class="col-lg-12">
-						<input type="text" placeholder="Message" name="msg">
+						<input type="text" placeholder="Message" name="msg" required>
 						<div class="text-center">
 							<button class="site-btn" value="Send">SEND IT!</button>
 						</div>
