Move tracks to its own file

--- a/index.html
+++ b/index.html
@@ -372,6 +372,7 @@
       nav.classList.toggle('active');
     }
   </script>
+  <script src="tracks.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
