--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
   <header>
-    <div class="logo"><img src="img/logo.png"></img></div>
+    <div class="logo"><img src="img/intro/logo.webp"></img></div>
     <div class="menu-toggle" onclick="toggleMenu()">
       <i class="fas fa-bars"></i>
     </div>
@@ -56,7 +56,7 @@
       </p>
     </div>
 
-     <img src="img/headshot.jpeg" alt="Alexander McVittie" />
+     <img src="img/intro/headshot.webp" alt="Alexander McVittie" />
     
   </section>
 
