--- a/index.html
+++ b/index.html
@@ -192,6 +192,13 @@
 						<li>Roland RD-2000 88 weighted key</li>
 					</div>
 					<br>
+					<h4>Drums</h4>
+					<div class="gear-grid">
+						<li>Pearl Export (22" kick, 10/12/16 toms, matched 14 snare)</li>
+						<li>Zildjian A Custom crash, ride, and hihat</li>
+						<li>Sabian hand-hammered splash/china</li>
+					</div>
+					<br>
 					<h4>Guitars & Ukuleles</h4>
 					<div class="gear-grid">
 						<li>Epiphone Les Paul Studio electric guitar</li>
