--- a/index.html
+++ b/index.html
@@ -194,9 +194,9 @@
 					<br>
 					<h4>Drums</h4>
 					<div class="gear-grid">
-						<li>Pearl Export (22" kick, 10/12/16 toms, matched 14 snare)</li>
-						<li>Zildjian A Custom crash, ride, and hihat</li>
-						<li>Sabian hand-hammered splash/china</li>
+						<li>Pearl Export Poplar/Asian Mahogany shells (22" kick, 10/12/16 toms, matched 14 snare)</li>
+						<li>Zildjian A Custom cymbals (20" medium ride, 7" fast crash, 6" hihat)</li>
+						<li>Sabian hand-hammered 5" splash/china</li>
 					</div>
 					<br>
 					<h4>Guitars & Ukuleles</h4>
