--- a/index.html
+++ b/index.html
@@ -98,10 +98,13 @@
   <h2 style="text-align: center; margin-bottom: 1rem;">Studio Gallery</h2>
   <div class="gallery-carousel" id="gallery-container"></div>
 
-  <div id="lightbox" class="gallery-lightbox" onclick="closeLightbox()">
-    <img id="lightbox-img" src="" alt="" />
-    <p id="lightbox-caption"></p>
-  </div>
+	<div id="lightbox" class="gallery-lightbox">
+	<button id="lightbox-close" class="lightbox-close">&times;</button>
+	<button id="lightbox-prev" class="lightbox-nav prev">&#10094;</button>
+	<img id="lightbox-img" src="" alt="" />
+	<button id="lightbox-next" class="lightbox-nav next">&#10095;</button>
+	<p id="lightbox-caption"></p>
+	</div>
 </section>
 
   <section id="contact">
