--- a/index.html
+++ b/index.html
@@ -9,13 +9,39 @@
   <link rel ="icon" type="image/x-icon" href="img/favicon.ico">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"/>
   
-  <style>
- 
-  </style>
+  <script type="application/ld+json">
+	{
+	  "@context": "https://schema.org",
+	  "@type": "MusicRecordingStudio",
+	  "name": "Antarctic Music Studios",
+	  "url": "https://antarcticstudios.ca",
+	  "address": {
+		"@type": "PostalAddress",
+		"addressLocality": "Cambridge",
+		"addressRegion": "ON",
+		"addressCountry": "CA"
+	  },
+	  "founder": {
+		"@type": "Person",
+		"name": "Alexander McVittie"
+	  },
+	  "sameAs": [
+		"https://instagram.com/antarcticstudios",
+		"https://facebook.com/antarcticstudios"
+	  ]
+	}
+  </script>
+  <meta name="description" content="Antarctic Music Studios offers professional keyboard and saxophone session tracks, mixing, mastering, and recording services in Cambridge, Ontario.">
+
+  <meta property="og:title" content="Antarctic Music Studios" />
+	<meta property="og:description" content="Killer sax and keys, mixing, mastering & recording in Cambridge, Ontario." />
+	<meta property="og:image" content="https://antarcticstudios.ca/img/intro/headshot.webp" />
+	<meta property="og:url" content="https://antarcticstudios.ca" />
+	<meta name="twitter:card" content="summary_large_image" />
 </head>
 <body>
   <header>
-    <div class="logo"><img src="img/intro/logo.webp"></img></div>
+    <div class="logo"><img src="img/intro/logo.webp" alt="Antarctic Music Studios logo"></img></div>
     <div class="menu-toggle" onclick="toggleMenu()">
       <i class="fas fa-bars"></i>
     </div>
