--- a/index.html
+++ b/index.html
@@ -232,6 +232,7 @@
 					<h4>Keyboards & Hardware Synths</h4>
 					<div class="gear-grid">
 						<li>ASM Hydrasynth</li>
+						<li>Behringer Lm-Drum drum machine</li>
 						<li>Behringer Model15 semi modular synth</li>
 						<li>Expressive E Osmose</li>
 						<li>Roland AX Edge keytar</li>
